= 0.7.1 - to be released
* bug fix
  * fixing the netzke_load endpoint when association fields are present

= 0.7.0 - 2011-08-09
* Core 0.7.0 and Ext 4 compatibility
* API changes
  * [JS] Removed the helper BorderLayoutPanel#get<Region>Component method altogether. Use Ext 4 Container#child instead

= v0.6.5 - to be released
* enhancements
  * When columns states are saved in the persistent storage, adding/removing columns (e.g. in the code) will reset the saved states
  * Moved features and specs to test/basepack_test_app
* bug fix
  * FormPanel with multiple association fields wouldn't submit data correctly
  * GridPanel's forms take over the +text+ configuration option for columns as +fieldLabel+ for default fields

= v0.6.4 - 2011-02-26
* API changes
  * The combo field able to talk to the server has changed its xtype from combobox to netzkeremotecombo. When getting values from the server via AJAX, it expects a 2-dimensional array now, where the first value is the real value (which gets submitted), and the second value is the display value.
  * xdatetime is no more. datetimefield is used instead.

* enhancements
  * Components updated to use Ext.Direct (by @pschyska)
  * New, improved advanced search for GridPanel and PagingFormPanel.
  * One-to-many association support in Form/GridPanel reworked to use the foreign id instead of a string. This gives us more flexibility about what to display in the association column/field, and also provides for performance improvements (no more need to search for the associated record based on the value provided from the column/field).
  * GridPanel now memorizes its columns visibility, position and size (when :persistence is set to true)
  * I18n for GridPanel
  * A default value can now also be assigned to association column/field (the value must be the associated record's ID)
  * Slightly optimized selenium tests (no artificial sleeping whenever possible)

* bug fix