@@ -100,6 +100,12 @@ module Netzke
             set_default_field_xtype(field) if field[:xtype].nil?
             set_default_read_only(field)
 
+            # temporal datetime setup, while we don't have real datetime field
+            if field[:attr_type] == :datetime || field[:attr_type] == :date
+              field[:format] ||= "Y-m-d" # needed for
+              field[:submit_format] = "Y-m-d"
+            end
+
             # provide our special combobox with our id
             field[:parent_id] = self.global_id if field[:xtype] == :netzkeremotecombo
 
@@ -183,6 +189,7 @@ module Netzke
               :date => :datefield,
               # WIP: waiting for datetime.js implementation for ExtJS 4
               # :datetime => :datetimefield,
+              :datetime => :datefield,
 
               :text => :textarea,
               :json => :jsonfield,
