@@ -102,7 +102,6 @@ module Netzke
 
           # Creates/updates a record from hash
           def create_or_update_record(hsh)
-
             hsh.merge!(config[:strong_default_attrs]) if config[:strong_default_attrs]
             @record ||= data_class.find(:first, :conditions => {data_class.primary_key => hsh.delete(data_class.primary_key)}) # only pick up the record specified in the params if it was not provided in the configuration
             success = true
