@@ -1,3 +1,4 @@
+# encoding: UTF-8
 # This file is auto-generated from the current state of the database. Instead
 # of editing this file, please use the migrations feature of Active Record to
 # incrementally modify your database, and then regenerate this schema definition.
@@ -10,7 +11,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20110701070052) do
+ActiveRecord::Schema.define(:version => 20110901114016) do
 
   create_table "addresses", :force => true do |t|
     t.integer  "user_id"
@@ -40,12 +41,13 @@ ActiveRecord::Schema.define(:version => 20110701070052) do
     t.integer  "author_id"
     t.string   "title"
     t.integer  "exemplars"
-    t.boolean  "digitized",  :default => false
+    t.boolean  "digitized",    :default => false
     t.text     "notes"
     t.string   "tags"
     t.integer  "rating"
     t.datetime "created_at"
     t.datetime "updated_at"
+    t.datetime "last_read_at"
   end
 
   create_table "netzke_component_states", :force => true do |t|
