@@ -1,6 +1,7 @@
 = 0.7.1 - to be released
 * bug fix
   * fixing the netzke_load endpoint when association fields are present
+  * dates were not displayed in date fields, and submitting a form with date fields might result in erasing those fields
 
 = 0.7.0 - 2011-08-09
 * Core 0.7.0 and Ext 4 compatibility
